@@ -2,10 +2,8 @@ package org.upyog.sv.service;
 
 import java.util.LinkedList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.egov.tracer.model.CustomException;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.upyog.sv.constants.StreetVendingConstants;
 import org.upyog.sv.util.MdmsUtil;
@@ -22,12 +20,15 @@ import lombok.extern.slf4j.Slf4j;
 @Service
 public class CalculationService {
 
-	@Autowired
-	private MdmsUtil mdmsUtil;
+	private final MdmsUtil mdmsUtil;
+
+	public CalculationService(MdmsUtil mdmsUtil) {
+		this.mdmsUtil = mdmsUtil;
+	}
 
 	/**
-	 * @param bookingRequest
-	 * @return
+	 * @param bookingRequest street vending request used for demand calculation
+	 * @return calculated demand details
 	 */
 	public List<DemandDetail> calculateDemand(StreetVendingRequest bookingRequest) {
 
@@ -60,10 +61,10 @@ public class CalculationService {
 	    //Filter the list of calculation types to include only those matching the derived application type
 	    List<CalculationType> filteredCalculationType = calculationTypes.stream()
 	            .filter(type -> requiredApplicationType.equalsIgnoreCase(type.getApplicationType()))
-	            .collect(Collectors.toList());
+	            .toList();
 
 		List<DemandDetail> demandDetails = processCalculationForDemandGeneration(tenantId, filteredCalculationType,
-				bookingRequest, headMasters);
+				headMasters);
 		
 		log.info("demandDetails : " + demandDetails);
 		
@@ -74,12 +75,11 @@ public class CalculationService {
 	}
 
 	private List<DemandDetail> processCalculationForDemandGeneration(String tenantId,
-			List<CalculationType> calculationTypes, StreetVendingRequest vendingRequest,
-			List<TaxHeadMaster> headMasters) {
+			List<CalculationType> calculationTypes, List<TaxHeadMaster> headMasters) {
 
 		List<DemandDetail> demandDetails = new LinkedList<>();
 
-		List<String> taxHeadMasters = headMasters.stream().map(head -> head.getCode()).collect(Collectors.toList());
+		List<String> taxHeadMasters = headMasters.stream().map(TaxHeadMaster::getCode).toList();
 
 		log.info("tax head masters  : " + taxHeadMasters);
 
